--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - ./nfp-backend:/usr/src/app
     depends_on:
       - db
-  frontend:
+  react-frontend:
     build: nfp-frontend
     ports:
       - 3000:3000
